# papi-wrap

./: .gitignore  CMakeLists.txt  FindPAPI.cmake  OutStreams.cpp  OutStreams.h  Papi.cpp  Papi.h  PapiCollector.cpp  PapiCollector.h  PapiCollector_nopapi.cpp  PapiCollectors.cpp  PapiCollectors.h  PapiEventSet.cpp  PapiWrapper.cpp  PapiWrapper.h  definitions.h  m_papi_wrap.f90  makefile  makefile.bgq  makefile.cray  makefile.gnu  makefile.intel  outstreams.cpp  papi_wrap.cpp  papi_wrap.h  util.h
cscs/: makefile
include/: OutStreams.h  Papi.h  PapiCollectors.h  PapiEventSet.h  util.h
test/: dot.c  events.txt  makefile  makefile.bgq  makefile.cray  makefile.gnu  makefile.intel  matmul.cpp  saxpy.f90  static.c  stream.cu  test.cpp
test/tmp/: build.sh  cplusplus.cpp  cplusplus.h  test.c
